# newswatcher

./: .env  .gitignore  Makefile  autoapp.py  pyproject.toml
api/: swagger.yml
docker/: docker-compose.yml  init-mongo.js
newswatcher/: app.py  database.py  exceptions.py  extensions.py  schema.py  settings.py
newswatcher/crawler/: models.py  schema.py  serializer.py  views.py
newswatcher/crawler/ggsearch/: __init__.py
newswatcher/storage/mongo/: models.py  store.py
requirements/: dev.txt  prod.txt
tests/: conftest.py  pytest.ini  test_crawler.py  test_news.py  test_storage.py
