[tool.poetry]
name = "newswather-api"
version = "0.1.0"
description = ""
authors = ["david <yilin9999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
flask_mongoengine = "^0.9.5"
python-dotenv = "^0.14.0"
Flask-PyMongo = "^2.3.0"
kafka-python = "^2.0.1"
requests = "^2.24.0"
marshmallow = "^3.7.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
